# CerberCam

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml
Documentation/: Documentation_PL.md
Patches/: version.go
Patches/genop/: generate.sh
Src/: local.yaml
Src/Client/: CerberCam.sln
Src/Client/CerberCam/: App.xaml  App.xaml.cs  CerberCam.csproj  CommandHandler.cs  MainWindow.xaml  MainWindow.xaml.cs  ViewModelBase.cs  packages.config
Src/Client/CerberCam.Core/: CerberCam.Core.csproj  IQueueWrapper.cs  Message.cs  QueueManager.cs  packages.config
Src/Client/CerberCam.Core/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Src/ElectronClient/: camera.js  configuration.js  index.html  index.js  login.html  main.html  main.js  messages.js  package.json  queue.js  renderer.js  welcome.html
Src/ElectronClient/commands/: send.js
Src/ElectronClient/css/: main.css
Src/ElectronClient/modules/: proto.js  queue.js
Src/Messages/: response.proto
Src/Server/: commandType.go  config.go  config.yaml  databaseManager.go  emailManager.go  main.go  message.pb.go  message.proto  queueManager.go  receiveCommand.go  response.pb.go  response.proto  sendCommand.go  sendEmailCommand.go  serializer.go  tensorflow.go
Src/Server/ImageRecognizer/: .gitignore  CMakeLists.txt  FindTensorflow.cmake  main.cpp
Src/Server/Scripts/: compileImageRecognizer.sh  compileProtobuf.sh
Tests/Client/CerberCam.Core.Tests/: CerberCam.Core.Tests.csproj  MessageTests.cs  QueueManagerTests.cs  packages.config
(+4 files in other folders)
